Wed Nov 18 11:32:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_peephole_optimize): eliminate always/never
	  branches after a literal object.  this sequence typically
	  appears by defined? operator for a method call on a local
	  variable.

Wed Nov 18 10:33:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): stretch the buffer size
	  when EMSGSIZE occurs on non HAVE_STRUCT_MSGHDR_MSG_CONTROL platforms
	  (such as, Windows).  fixes a test error revealed by r52625.

Wed Nov 18 10:12:36 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): use 4096 as
	  default size to match pre-r52610, which also maps to a common
	  page size.

Wed Nov 18 10:05:25 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* doc/syntax/refinements.rdoc: update documentation to reflect
	  recent changes.
	  [ci skip] [ruby-core:71466] [Misc #11681] Patch by James Adam

Wed Nov 18 09:50:21 2015  Naotoshi Seo  <sonots@gmail.com>

	* test/logger/test_logdevice.rb: Fix tests of logger to make it work on
	  windows (windows can not remove opened file) [Bug #11702]

Wed Nov 18 06:59:52 2015  Eric Wong  <e@80x24.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): grow buffer
	  on unspecified maxdatlen
	  [ruby-core:71517] [Bug #11701]
	* ext/socket/lib/socket.rb (Socket#recvmsg): nil default for dlen
	  (Socket#recvmsg_nonblock): ditto
	* test/socket/test_socket.rb (test_recvmsg_udp_no_arg): new test

Tue Nov 17 19:50:06 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (fstat): declare for mingw.

Tue Nov 17 19:02:59 2015  NAKAMURA Usaku  <usa@ruby-lang.org>

	* configure.in (BASERUBY): use Kernel#print instead of Kernel#p because
	  the baseruby may output CRLF as end of line.

Tue Nov 17 15:34:34 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>
	* NEWS: Added update from Unicode 7.0.0 to 8.0.0 [ci skip]

Tue Nov 17 15:30:30 2015  Martin Duerst  <duerst@it.aoyama.ac.jp>