@@ -1,3 +1,10 @@
+Wed Nov 18 17:06:19 2015  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c (rb_raw_obj_info): fix trivial issues.
+
+	  * support SPECIAL_CONSTs.
+	  * fix IMEMO/ment outputs.
+
 Wed Nov 18 11:32:15 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* compile.c (iseq_peephole_optimize): eliminate always/never
